# wia

./: .env.example  .gitignore  AGENTS.md  DEVELOPER_GUIDE.md  LICENSE  NOTICE  README.md  _diag.py  _probe.py  _probe2.py  _probe_thu.py  pyproject.toml  version.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  copilot-setup-steps.yml  dependency-review.yml  release.yml
apps/wia-desktop/: README.md  pyinstaller.spec  pyproject.toml
apps/wia-desktop/docs/: wia-action.md  wia-briefing.md  wia-review.md
apps/wia-desktop/src/wia/: __init__.py  app.py  config.py  logging_setup.py  main.py  single_instance.py
apps/wia-desktop/src/wia/api/: actions.py  briefing.py  entries.py  export.py  health.py  prefs.py  review.py  schedule.py  updates.py  workiq.py
apps/wia-desktop/src/wia/core/: __init__.py  categorization.py  grouping.py  orchestrator.py  review.py  scheduler.py  types.py  updates.py  week.py
apps/wia-desktop/src/wia/core/actions/: __init__.py  base.py  decision_note.py  follow_up.py  registry.py
apps/wia-desktop/src/wia/core/actions/drafts/: __init__.py  email.py  note.py
apps/wia-desktop/src/wia/mcp_clients/: __init__.py  workiq.py
apps/wia-desktop/src/wia/mcp_server/: __init__.py  server.py
apps/wia-desktop/src/wia/storage/: __init__.py  actions.py  db.py  entries.py  models.py  prefs.py  scan_history.py
apps/wia-desktop/src/wia/ui/: app.js  icons.js  index.html  logo.png.bak  styles.css
apps/wia-desktop/tests/: conftest.py  test_actions.py  test_actions_drafts.py  test_categorization.py  test_categorization_umbrella.py  test_docs_drift.py  test_entries_merge.py  test_grouping.py  test_internal_domains_union.py  test_logging_setup.py  test_manual_entry_api.py  test_noise_filters.py  test_orchestrator.py  test_prefs.py  test_prefs_noise.py  test_review.py  test_single_instance.py  test_updates.py  test_week.py  test_workiq_calendar_merge.py  test_workiq_identity.py  test_workiq_retry.py  test_workiq_title_normalization.py
docs/: ARCHITECTURE.md  AUTH.md  COPILOT_AGENTS.md  COPILOT_MCP.md  GITHUB.md  ROADMAP.md
docs/releases/: v0.2.1.md  v0.3.0.md  v0.4.2.md
installer/: wia.iss
