[project]
name = "wia"
version = "0.0.0"
description = "WIA monorepo workspace root"
requires-python = ">=3.12,<3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
dependencies = ["wia-desktop"]

[tool.uv.workspace]
members = ["apps/wia-desktop"]

[tool.uv.sources]
wia-desktop = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008", "RUF001"]

[tool.pytest.ini_options]
testpaths = ["apps/wia-desktop/tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.6.0",
]
