[project]
name = "wia-desktop"
version = "0.1.0"
description = "WIA desktop app — pywebview + FastAPI + Work IQ MCP orchestrator"
requires-python = ">=3.12,<3.13"
authors = [{ name = "WIA contributors" }]
readme = "README.md"
license = "Apache-2.0"
license-files = ["../../LICENSE", "../../NOTICE"]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlmodel>=0.0.22",
    "httpx>=0.27",
    "pywebview>=5.2",
    "mcp>=1.2",
    "python-dateutil>=2.9",
    "platformdirs>=4.3",
    "pillow>=10.0",
]

[project.scripts]
wia-desktop = "wia.main:run"
wia-mcp = "wia.mcp_server.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wia"]

[tool.hatch.build.targets.wheel.force-include]
"src/wia/ui" = "wia/ui"
